@@ -1,110 +1,108 @@
 package net.p3pp3rf1y.sophisticatedbackpacks.backpack;
 
-import com.google.common.collect.ImmutableList;
-import net.minecraft.block.BlockState;
-import net.minecraft.block.SoundType;
-import net.minecraft.client.gui.screen.Screen;
-import net.minecraft.client.util.ITooltipFlag;
-import net.minecraft.entity.Entity;
-import net.minecraft.entity.LivingEntity;
-import net.minecraft.entity.item.ItemEntity;
-import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.entity.player.ServerPlayerEntity;
-import net.minecraft.fluid.FluidState;
-import net.minecraft.fluid.Fluids;
-import net.minecraft.inventory.EquipmentSlotType;
-import net.minecraft.inventory.container.SimpleNamedContainerProvider;
-import net.minecraft.item.BlockItemUseContext;
-import net.minecraft.item.DyeColor;
-import net.minecraft.item.ItemGroup;
-import net.minecraft.item.ItemStack;
-import net.minecraft.item.ItemUseContext;
-import net.minecraft.nbt.CompoundNBT;
-import net.minecraft.util.ActionResult;
-import net.minecraft.util.ActionResultType;
-import net.minecraft.util.Direction;
-import net.minecraft.util.Hand;
-import net.minecraft.util.NonNullList;
-import net.minecraft.util.SoundCategory;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.math.shapes.ISelectionContext;
-import net.minecraft.util.math.vector.Vector3d;
-import net.minecraft.util.text.ITextComponent;
-import net.minecraft.util.text.StringTextComponent;
-import net.minecraft.util.text.TextFormatting;
-import net.minecraft.util.text.TranslationTextComponent;
-import net.minecraft.world.World;
-import net.minecraft.world.server.ServerWorld;
-import net.minecraftforge.api.distmarker.Dist;
-import net.minecraftforge.api.distmarker.OnlyIn;
-import net.minecraftforge.common.capabilities.Capability;
-import net.minecraftforge.common.capabilities.ICapabilityProvider;
-import net.minecraftforge.common.util.LazyOptional;
-import net.minecraftforge.energy.CapabilityEnergy;
-import net.minecraftforge.fluids.capability.CapabilityFluidHandler;
-import net.minecraftforge.fml.common.ObfuscationReflectionHelper;
-import net.minecraftforge.fml.network.NetworkHooks;
-import net.minecraftforge.items.CapabilityItemHandler;
+import net.fabricmc.api.EnvType;
+import net.fabricmc.fabric.api.transfer.v1.item.ItemVariant;
+import net.fabricmc.fabric.api.transfer.v1.transaction.Transaction;
+import net.fabricmc.loader.api.FabricLoader;
+import net.minecraft.ChatFormatting;
+import net.minecraft.client.Minecraft;
+import net.minecraft.client.gui.screens.Screen;
+import net.minecraft.core.BlockPos;
+import net.minecraft.core.Direction;
+import net.minecraft.core.NonNullList;
+import net.minecraft.network.chat.Component;
+import net.minecraft.server.level.ServerLevel;
+import net.minecraft.server.level.ServerPlayer;
+import net.minecraft.sounds.SoundSource;
+import net.minecraft.world.InteractionHand;
+import net.minecraft.world.InteractionResult;
+import net.minecraft.world.InteractionResultHolder;
+import net.minecraft.world.entity.Entity;
+import net.minecraft.world.entity.EquipmentSlot;
+import net.minecraft.world.entity.SlotAccess;
+import net.minecraft.world.entity.item.ItemEntity;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.inventory.ClickAction;
+import net.minecraft.world.inventory.Slot;
+import net.minecraft.world.inventory.tooltip.TooltipComponent;
+import net.minecraft.world.item.CreativeModeTab;
+import net.minecraft.world.item.DyeColor;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.TooltipFlag;
+import net.minecraft.world.item.context.BlockPlaceContext;
+import net.minecraft.world.item.context.UseOnContext;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.level.block.SoundType;
+import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.material.FluidState;
+import net.minecraft.world.level.material.Fluids;
+import net.minecraft.world.phys.Vec3;
+import net.minecraft.world.phys.shapes.CollisionContext;
 import net.p3pp3rf1y.sophisticatedbackpacks.Config;
-import net.p3pp3rf1y.sophisticatedbackpacks.SophisticatedBackpacks;
-import net.p3pp3rf1y.sophisticatedbackpacks.api.CapabilityBackpackWrapper;
-import net.p3pp3rf1y.sophisticatedbackpacks.api.IBackpackWrapper;
-import net.p3pp3rf1y.sophisticatedbackpacks.api.ITickableUpgrade;
 import net.p3pp3rf1y.sophisticatedbackpacks.backpack.wrapper.BackpackWrapper;
+import net.p3pp3rf1y.sophisticatedbackpacks.backpack.wrapper.IBackpackWrapper;
+import net.p3pp3rf1y.sophisticatedbackpacks.common.BackpackWrapperLookup;
 import net.p3pp3rf1y.sophisticatedbackpacks.common.gui.BackpackContainer;
 import net.p3pp3rf1y.sophisticatedbackpacks.common.gui.BackpackContext;
-import net.p3pp3rf1y.sophisticatedbackpacks.crafting.BackpackDyeRecipe;
 import net.p3pp3rf1y.sophisticatedbackpacks.init.ModItems;
 import net.p3pp3rf1y.sophisticatedbackpacks.upgrades.everlasting.EverlastingBackpackItemEntity;
 import net.p3pp3rf1y.sophisticatedbackpacks.upgrades.everlasting.EverlastingUpgradeItem;
-import net.p3pp3rf1y.sophisticatedbackpacks.upgrades.jukebox.ServerBackpackSoundHandler;
 import net.p3pp3rf1y.sophisticatedbackpacks.util.InventoryInteractionHelper;
-import net.p3pp3rf1y.sophisticatedbackpacks.util.ItemBase;
 import net.p3pp3rf1y.sophisticatedbackpacks.util.PlayerInventoryProvider;
-import net.p3pp3rf1y.sophisticatedbackpacks.util.WorldHelper;
+import net.p3pp3rf1y.sophisticatedcore.api.IStashStorageItem;
+import net.p3pp3rf1y.sophisticatedcore.api.IStorageWrapper;
+import net.p3pp3rf1y.sophisticatedcore.client.gui.utils.TranslationHelper;
+import net.p3pp3rf1y.sophisticatedcore.settings.memory.MemorySettingsCategory;
+import net.p3pp3rf1y.sophisticatedcore.upgrades.ITickableUpgrade;
+import net.p3pp3rf1y.sophisticatedcore.upgrades.jukebox.ServerStorageSoundHandler;
+import net.p3pp3rf1y.sophisticatedcore.util.ColorHelper;
+import net.p3pp3rf1y.sophisticatedcore.util.ItemBase;
+import net.p3pp3rf1y.sophisticatedcore.util.MenuProviderHelper;
+import net.p3pp3rf1y.sophisticatedcore.util.WorldHelper;
 
-import javax.annotation.Nullable;
 import java.util.List;
+import java.util.Optional;
 import java.util.function.IntSupplier;
 import java.util.function.Supplier;
+import java.util.function.UnaryOperator;
+import javax.annotation.Nullable;
 
-import static net.minecraft.state.properties.BlockStateProperties.WATERLOGGED;
+import static net.minecraft.world.level.block.state.properties.BlockStateProperties.WATERLOGGED;
 
-public class BackpackItem extends ItemBase {
-	public static final String BACKPACK_TOOLTIP = "item.sophisticatedbackpacks.backpack.tooltip.";
+public class BackpackItem extends ItemBase implements IStashStorageItem {
 	private final IntSupplier numberOfSlots;
 	private final IntSupplier numberOfUpgradeSlots;
 	private final Supplier<BackpackBlock> blockSupplier;
 
 	public BackpackItem(IntSupplier numberOfSlots, IntSupplier numberOfUpgradeSlots, Supplier<BackpackBlock> blockSupplier) {
-		this(numberOfSlots, numberOfUpgradeSlots, blockSupplier, new Properties());
+		this(numberOfSlots, numberOfUpgradeSlots, blockSupplier, p -> p);
 	}
 
-	public BackpackItem(IntSupplier numberOfSlots, IntSupplier numberOfUpgradeSlots, Supplier<BackpackBlock> blockSupplier, Properties properties) {
-		super(properties.stacksTo(1));
+	public BackpackItem(IntSupplier numberOfSlots, IntSupplier numberOfUpgradeSlots, Supplier<BackpackBlock> blockSupplier, UnaryOperator<Properties> updateProperties) {
+		super(updateProperties.apply(new Properties().stacksTo(1)), ModItems.CREATIVE_TAB);
 		this.numberOfSlots = numberOfSlots;
 		this.numberOfUpgradeSlots = numberOfUpgradeSlots;
 		this.blockSupplier = blockSupplier;
 	}
 
 	@Override
-	public void fillItemCategory(ItemGroup group, NonNullList<ItemStack> items) {
+	public void fillItemCategory(CreativeModeTab group, NonNullList<ItemStack> items) {
 		super.fillItemCategory(group, items);
 
-		if (!allowdedIn(group) || this != ModItems.BACKPACK.get() || !Config.COMMON.enabledItems.isItemEnabled(this)) {
+		if (!allowedIn(group) || this != ModItems.BACKPACK || !net.p3pp3rf1y.sophisticatedcore.Config.COMMON.enabledItems.isItemEnabled(this)) {
 			return;
 		}
 
 		for (DyeColor color : DyeColor.values()) {
 			ItemStack stack = new ItemStack(this);
-			new BackpackWrapper(stack).setColors(color.getColorValue(), color.getColorValue());
+			new BackpackWrapper(stack).setColors(ColorHelper.getColor(color.getTextureDiffuseColors()), ColorHelper.getColor(color.getTextureDiffuseColors()));
 			items.add(stack);
 		}
 
-		int clothColor = BackpackDyeRecipe.calculateColor(BackpackWrapper.DEFAULT_CLOTH_COLOR, BackpackWrapper.DEFAULT_CLOTH_COLOR, ImmutableList.of(
+		int clothColor = ColorHelper.calculateColor(BackpackWrapper.DEFAULT_CLOTH_COLOR, BackpackWrapper.DEFAULT_CLOTH_COLOR, List.of(
 				DyeColor.BLUE, DyeColor.YELLOW, DyeColor.LIME
 		));
-		int trimColor = BackpackDyeRecipe.calculateColor(BackpackWrapper.DEFAULT_BORDER_COLOR, BackpackWrapper.DEFAULT_BORDER_COLOR, ImmutableList.of(
+		int trimColor = ColorHelper.calculateColor(BackpackWrapper.DEFAULT_BORDER_COLOR, BackpackWrapper.DEFAULT_BORDER_COLOR, List.of(
 				DyeColor.BLUE, DyeColor.BLACK
 		));
 
@@ -113,189 +111,172 @@ public class BackpackItem extends ItemBase {
 		items.add(stack);
 	}
 
-	@OnlyIn(Dist.CLIENT)
 	@Override
-	public void appendHoverText(ItemStack stack, @Nullable World worldIn, List<ITextComponent> tooltip, ITooltipFlag flagIn) {
+	public void appendHoverText(ItemStack stack, @Nullable Level worldIn, List<Component> tooltip, TooltipFlag flagIn) {
 		super.appendHoverText(stack, worldIn, tooltip, flagIn);
-		if (flagIn == ITooltipFlag.TooltipFlags.ADVANCED) {
-			stack.getCapability(CapabilityBackpackWrapper.getCapabilityInstance())
-					.ifPresent(w -> w.getContentsUuid().ifPresent(uuid -> tooltip.add(new StringTextComponent("UUID: " + uuid).withStyle(TextFormatting.DARK_GRAY))));
+		if (flagIn == TooltipFlag.Default.ADVANCED) {
+			BackpackWrapperLookup.get(stack)
+					.flatMap(IStorageWrapper::getContentsUuid)
+					.ifPresent(uuid -> tooltip.add(Component.literal("UUID: " + uuid).withStyle(ChatFormatting.DARK_GRAY)));
 		}
 		if (!Screen.hasShiftDown()) {
-			tooltip.add(new TranslationTextComponent(
-					BACKPACK_TOOLTIP + "press_for_contents",
-					new TranslationTextComponent(BACKPACK_TOOLTIP + "shift").withStyle(TextFormatting.AQUA)
-			).withStyle(TextFormatting.GRAY));
+			tooltip.add(Component.translatable(
+					TranslationHelper.INSTANCE.translItemTooltip("storage") + ".press_for_contents",
+					Component.translatable(TranslationHelper.INSTANCE.translItemTooltip("storage") + ".shift").withStyle(ChatFormatting.AQUA)
+			).withStyle(ChatFormatting.GRAY));
 		}
 	}
 
 	@Override
-	public boolean hasCustomEntity(ItemStack stack) {
-		return hasEverlastingUpgrade(stack);
+	public Optional<TooltipComponent> getTooltipImage(ItemStack stack) {
+		TooltipComponent ret = null;
+		if (FabricLoader.getInstance().getEnvironmentType() == EnvType.CLIENT) {
+			Minecraft mc = Minecraft.getInstance();
+			if (Screen.hasShiftDown() || (mc.player != null && !mc.player.containerMenu.getCarried().isEmpty())) {
+				ret = new BackpackContentsTooltip(stack);
+			}
+		}
+		return Optional.ofNullable(ret);
 	}
 
 	private boolean hasEverlastingUpgrade(ItemStack stack) {
-		return stack.getCapability(CapabilityBackpackWrapper.getCapabilityInstance()).map(w -> !w.getUpgradeHandler().getTypeWrappers(EverlastingUpgradeItem.TYPE).isEmpty()).orElse(false);
+		return BackpackWrapperLookup.get(stack).map(w -> !w.getUpgradeHandler().getTypeWrappers(EverlastingUpgradeItem.TYPE).isEmpty()).orElse(false);
 	}
 
 	@Nullable
-	@Override
-	public Entity createEntity(World world, Entity entity, ItemStack itemstack) {
-		if (!(entity instanceof ItemEntity)) {
+	public Entity createCustomEntity(Level world, Entity entity, ItemStack itemstack) {
+		if (!(entity instanceof ItemEntity itemEntity)) {
 			return null;
 		}
+
+		UUIDDeduplicator.dedupeBackpackItemEntityInArea(itemEntity);
 		return hasEverlastingUpgrade(itemstack) ? createEverlastingBackpack(world, (ItemEntity) entity, itemstack) : null;
 	}
 
 	@Nullable
-	private EverlastingBackpackItemEntity createEverlastingBackpack(World world, ItemEntity itemEntity, ItemStack itemstack) {
-		EverlastingBackpackItemEntity backpackItemEntity = ModItems.EVERLASTING_BACKPACK_ITEM_ENTITY.get().create(world);
+	private EverlastingBackpackItemEntity createEverlastingBackpack(Level world, ItemEntity itemEntity, ItemStack itemstack) {
+		EverlastingBackpackItemEntity backpackItemEntity = ModItems.EVERLASTING_BACKPACK_ITEM_ENTITY.create(world);
 		if (backpackItemEntity != null) {
 			backpackItemEntity.setPos(itemEntity.getX(), itemEntity.getY(), itemEntity.getZ());
 			backpackItemEntity.setItem(itemstack);
-			backpackItemEntity.setPickUpDelay(getPickupDelay(itemEntity));
+			backpackItemEntity.setPickUpDelay(itemEntity.pickupDelay);
 			backpackItemEntity.setThrower(itemEntity.getThrower());
 			backpackItemEntity.setDeltaMovement(itemEntity.getDeltaMovement());
 		}
 		return backpackItemEntity;
 	}
 
-	private int getPickupDelay(ItemEntity itemEntity) {
-		Integer result = ObfuscationReflectionHelper.getPrivateValue(ItemEntity.class, itemEntity, "field_145804_b");
-		if (result == null) {
-			SophisticatedBackpacks.LOGGER.error("Reflection get of pickupDelay (pickupDelay) from ItemEntity returned null");
-			return 20;
-		}
-		return result;
-	}
-
 	@Override
-	public ActionResultType useOn(ItemUseContext context) {
-		PlayerEntity player = context.getPlayer();
+	public InteractionResult useOn(UseOnContext context) {
+		Player player = context.getPlayer();
 		if (player == null || !player.isShiftKeyDown()) {
-			return ActionResultType.PASS;
+			return InteractionResult.PASS;
 		}
 
 		if (InventoryInteractionHelper.tryInventoryInteraction(context)) {
-			return ActionResultType.SUCCESS;
+			return InteractionResult.SUCCESS;
 		}
 
 		Direction direction = player.getDirection().getOpposite();
 
-		BlockItemUseContext blockItemUseContext = new BlockItemUseContext(context);
-		ActionResultType result = tryPlace(player, direction, blockItemUseContext);
-		return result == ActionResultType.PASS ? super.useOn(context) : result;
+		BlockPlaceContext blockItemUseContext = new BlockPlaceContext(context);
+		InteractionResult result = tryPlace(player, direction, blockItemUseContext);
+		return result == InteractionResult.PASS ? super.useOn(context) : result;
 	}
 
-	public ActionResultType tryPlace(@Nullable PlayerEntity player, Direction direction, BlockItemUseContext blockItemUseContext) {
+	public InteractionResult tryPlace(@Nullable Player player, Direction direction, BlockPlaceContext blockItemUseContext) {
 		if (!blockItemUseContext.canPlace()) {
-			return ActionResultType.FAIL;
+			return InteractionResult.FAIL;
 		}
-		World world = blockItemUseContext.getLevel();
+		Level world = blockItemUseContext.getLevel();
 		BlockPos pos = blockItemUseContext.getClickedPos();
 
 		FluidState fluidstate = blockItemUseContext.getLevel().getFluidState(pos);
 		BlockState placementState = blockSupplier.get().defaultBlockState().setValue(BackpackBlock.FACING, direction)
 				.setValue(WATERLOGGED, fluidstate.getType() == Fluids.WATER);
 		if (!canPlace(blockItemUseContext, placementState)) {
-			return ActionResultType.FAIL;
+			return InteractionResult.FAIL;
 		}
 
 		if (world.setBlockAndUpdate(pos, placementState)) {
 			ItemStack backpack = blockItemUseContext.getItemInHand();
-			WorldHelper.getTile(world, pos, BackpackTileEntity.class).ifPresent(te -> {
+			WorldHelper.getBlockEntity(world, pos, BackpackBlockEntity.class).ifPresent(te -> {
 				te.setBackpack(getBackpackCopy(player, backpack));
 				te.refreshRenderState();
+
+				te.tryToAddToController();
 			});
 
 			if (!world.isClientSide) {
 				stopBackpackSounds(backpack, world, pos);
 			}
 
-			SoundType soundtype = placementState.getSoundType(world, pos, player);
-			world.playSound(player, pos, soundtype.getPlaceSound(), SoundCategory.BLOCKS, (soundtype.getVolume() + 1.0F) / 2.0F, soundtype.getPitch() * 0.8F);
+			SoundType soundtype = placementState.getSoundType();
+			world.playSound(player, pos, soundtype.getPlaceSound(), SoundSource.BLOCKS, (soundtype.getVolume() + 1.0F) / 2.0F, soundtype.getPitch() * 0.8F);
 			if (player == null || !player.isCreative()) {
 				backpack.shrink(1);
 			}
 
-			return ActionResultType.SUCCESS;
+			return InteractionResult.SUCCESS;
 		}
-		return ActionResultType.PASS;
+		return InteractionResult.PASS;
 	}
 
-	private static void stopBackpackSounds(ItemStack backpack, World world, BlockPos pos) {
-		backpack.getCapability(CapabilityBackpackWrapper.getCapabilityInstance()).ifPresent(wrapper -> wrapper.getContentsUuid().ifPresent(uuid ->
-				ServerBackpackSoundHandler.stopPlayingDisc((ServerWorld) world, Vector3d.atCenterOf(pos), uuid))
-		);
+	private static void stopBackpackSounds(ItemStack backpack, Level world, BlockPos pos) {
+		BackpackWrapperLookup.get(backpack).flatMap(IStorageWrapper::getContentsUuid).ifPresent(uuid ->
+				ServerStorageSoundHandler.stopPlayingDisc((ServerLevel) world, Vec3.atCenterOf(pos), uuid));
 	}
 
-	private ItemStack getBackpackCopy(@Nullable PlayerEntity player, ItemStack backpack) {
+	private ItemStack getBackpackCopy(@Nullable Player player, ItemStack backpack) {
 		if (player == null || !player.isCreative()) {
 			return backpack.copy();
 		}
-		return backpack.getCapability(CapabilityBackpackWrapper.getCapabilityInstance())
-				.map(IBackpackWrapper::cloneBackpack).orElse(new ItemStack(ModItems.BACKPACK.get()));
+		return BackpackWrapperLookup.get(backpack)
+				.map(IBackpackWrapper::cloneBackpack).orElse(new ItemStack(ModItems.BACKPACK));
 	}
 
-	protected boolean canPlace(BlockItemUseContext context, BlockState state) {
-		PlayerEntity playerentity = context.getPlayer();
-		ISelectionContext iselectioncontext = playerentity == null ? ISelectionContext.empty() : ISelectionContext.of(playerentity);
-		return (state.canSurvive(context.getLevel(), context.getClickedPos())) && context.getLevel().isUnobstructed(state, context.getClickedPos(), iselectioncontext);
+	protected boolean canPlace(BlockPlaceContext context, BlockState state) {
+		Player playerentity = context.getPlayer();
+		CollisionContext iselectioncontext = playerentity == null ? CollisionContext.empty() : CollisionContext.of(playerentity);
+		return state.canSurvive(context.getLevel(), context.getClickedPos()) && context.getLevel().isUnobstructed(state, context.getClickedPos(), iselectioncontext);
 	}
 
 	@Override
-	public ActionResult<ItemStack> use(World world, PlayerEntity player, Hand hand) {
+	public InteractionResultHolder<ItemStack> use(Level world, Player player, InteractionHand hand) {
 		ItemStack stack = player.getItemInHand(hand);
 
-		if (!world.isClientSide && player instanceof ServerPlayerEntity) {
-			String handlerName = hand == Hand.MAIN_HAND ? PlayerInventoryProvider.MAIN_INVENTORY : PlayerInventoryProvider.OFFHAND_INVENTORY;
-			int slot = hand == Hand.MAIN_HAND ? player.inventory.selected : 0;
+		if (!world.isClientSide && player instanceof ServerPlayer) {
+			String handlerName = hand == InteractionHand.MAIN_HAND ? PlayerInventoryProvider.MAIN_INVENTORY : PlayerInventoryProvider.OFFHAND_INVENTORY;
+			int slot = hand == InteractionHand.MAIN_HAND ? player.getInventory().selected : 0;
 			BackpackContext.Item context = new BackpackContext.Item(handlerName, slot);
-			NetworkHooks.openGui((ServerPlayerEntity) player, new SimpleNamedContainerProvider((w, p, pl) -> new BackpackContainer(w, pl, context), stack.getHoverName()),
-					context::toBuffer);
+
+			player.openMenu(MenuProviderHelper.createMenuProvider((w, bpc, pl) -> new BackpackContainer(w, pl, context), context, stack.getHoverName()));
 		}
-		return ActionResult.success(stack);
+		return InteractionResultHolder.success(stack);
 	}
 
 	@Override
-	public ICapabilityProvider initCapabilities(ItemStack stack, @Nullable CompoundNBT nbt) {
-		return new ICapabilityProvider() {
-			private IBackpackWrapper wrapper = null;
-
-			@Override
-			public <T> LazyOptional<T> getCapability(Capability<T> cap, @Nullable Direction side) {
-				initWrapper();
-				if (cap == CapabilityBackpackWrapper.getCapabilityInstance()) {
-					return LazyOptional.of(() -> wrapper).cast();
-				} else if (cap == CapabilityItemHandler.ITEM_HANDLER_CAPABILITY) {
-					return LazyOptional.of(() -> wrapper.getInventoryForInputOutput()).cast();
-				} else if (cap == CapabilityFluidHandler.FLUID_HANDLER_ITEM_CAPABILITY) {
-					return wrapper.getFluidHandler().<LazyOptional<T>>map(handler -> LazyOptional.of(() -> handler).cast()).orElseGet(LazyOptional::empty);
-				} else if (cap == CapabilityEnergy.ENERGY) {
-					return wrapper.getEnergyStorage().<LazyOptional<T>>map(storage -> LazyOptional.of(() -> storage).cast()).orElseGet(LazyOptional::empty);
-				}
-				return LazyOptional.empty();
-			}
-
-			private void initWrapper() {
-				if (wrapper == null) {
-					wrapper = new BackpackWrapper(stack);
-				}
-			}
-		};
-	}
-
-	@Override
-	public void inventoryTick(ItemStack stack, World worldIn, Entity entityIn, int itemSlot, boolean isSelected) {
-		if (worldIn.isClientSide || !(entityIn instanceof PlayerEntity)) {
+	public void onArmorTick(ItemStack stack, Level level, Player player) {
+		if (level.isClientSide || player.isSpectator() || player.isDeadOrDying() || Boolean.FALSE.equals(Config.COMMON.nerfsConfig.onlyWornBackpackTriggersUpgrades.get())) {
 			return;
 		}
-		PlayerEntity player = (PlayerEntity) entityIn;
-		stack.getCapability(CapabilityBackpackWrapper.getCapabilityInstance()).ifPresent(
+		BackpackWrapperLookup.get(stack).ifPresent(
 				wrapper -> wrapper.getUpgradeHandler().getWrappersThatImplement(ITickableUpgrade.class)
-						.forEach(upgrade -> upgrade.tick(player, player.level, player.blockPosition()))
+						.forEach(upgrade -> upgrade.tick(player, player.getLevel(), player.blockPosition()))
 		);
-		super.inventoryTick(stack, worldIn, entityIn, itemSlot, isSelected);
+		super.onArmorTick(stack, level, player);
+	}
+
+	@Override
+	public void inventoryTick(ItemStack stack, Level level, Entity entityIn, int itemSlot, boolean isSelected) {
+		if (level.isClientSide || !(entityIn instanceof Player player) || player.isSpectator() || player.isDeadOrDying() || (Config.COMMON.nerfsConfig.onlyWornBackpackTriggersUpgrades.get() && itemSlot > -1)) {
+			return;
+		}
+		BackpackWrapperLookup.get(stack).ifPresent(
+				wrapper -> wrapper.getUpgradeHandler().getWrappersThatImplement(ITickableUpgrade.class)
+						.forEach(upgrade -> upgrade.tick(player, player.getLevel(), player.blockPosition()))
+		);
+		super.inventoryTick(stack, level, entityIn, itemSlot, isSelected);
 	}
 
 	public int getNumberOfSlots() {
@@ -308,17 +289,85 @@ public class BackpackItem extends ItemBase {
 
 	@Nullable
 	@Override
-	public EquipmentSlotType getEquipmentSlot(ItemStack stack) {
-		return EquipmentSlotType.CHEST;
+	public EquipmentSlot getEquipmentSlot(ItemStack stack) {
+		return EquipmentSlot.CHEST;
 	}
 
 	@Override
-	public boolean shouldCauseReequipAnimation(ItemStack oldStack, ItemStack newStack, boolean slotChanged) {
-		return slotChanged;
+	public Optional<TooltipComponent> getInventoryTooltip(ItemStack stack) {
+		return Optional.of(new BackpackItem.BackpackContentsTooltip(stack));
 	}
 
 	@Override
-	public boolean makesPiglinsNeutral(ItemStack stack, LivingEntity wearer) {
-		return stack.getItem() == ModItems.GOLD_BACKPACK.get();
+	public ItemStack stash(ItemStack storageStack, ItemStack stack) {
+		return BackpackWrapperLookup.get(storageStack)
+				.map(wrapper -> {
+					try (Transaction ctx = Transaction.openOuter()) {
+						long inserted = wrapper.getInventoryForUpgradeProcessing().insert(ItemVariant.of(stack), stack.getCount(), ctx);
+						ctx.commit();
+
+						ItemStack result = stack.copy();
+						result.setCount(stack.getCount() - (int) inserted);
+						return result;
+					}
+				}).orElse(stack);
+	}
+
+	@Override
+	public StashResult getItemStashable(ItemStack storageStack, ItemStack stack) {
+		return BackpackWrapperLookup.get(storageStack).map(wrapper -> {
+			if (wrapper.getInventoryForUpgradeProcessing().simulateInsert(ItemVariant.of(stack), stack.getCount(), null) == 0) {
+				return StashResult.NO_SPACE;
+			}
+			if (wrapper.getInventoryHandler().getSlotTracker().getItems().contains(stack.getItem()) || wrapper.getSettingsHandler().getTypeCategory(MemorySettingsCategory.class).matchesFilter(stack)) {
+				return StashResult.MATCH_AND_SPACE;
+			}
+
+			return StashResult.SPACE;
+		}).orElse(StashResult.NO_SPACE);
+	}
+
+	public record BackpackContentsTooltip(ItemStack backpack) implements TooltipComponent {
+		public ItemStack getBackpack() {
+			return backpack;
+		}
+	}
+
+	@Override
+	public boolean overrideStackedOnOther(ItemStack storageStack, Slot slot, ClickAction action, Player player) {
+		if (storageStack.getCount() > 1 || !slot.mayPickup(player) || action != ClickAction.SECONDARY) {
+			return super.overrideStackedOnOther(storageStack, slot, action, player);
+		}
+
+		ItemStack stackToStash = slot.getItem();
+		ItemStack stashResult = stash(storageStack, stackToStash);
+		if (stashResult.getCount() != stackToStash.getCount()) {
+			slot.set(stashResult);
+			slot.onTake(player, stashResult);
+			return true;
+		}
+
+		return super.overrideStackedOnOther(storageStack, slot, action, player);
+	}
+
+	@Override
+	public boolean overrideOtherStackedOnMe(ItemStack storageStack, ItemStack otherStack, Slot slot, ClickAction action, Player player, SlotAccess carriedAccess) {
+		if (storageStack.getCount() > 1 || !slot.mayPlace(storageStack) || action != ClickAction.SECONDARY) {
+			return super.overrideOtherStackedOnMe(storageStack, otherStack, slot, action, player, carriedAccess);
+		}
+
+		ItemStack result = stash(storageStack, otherStack);
+		if (result.getCount() != otherStack.getCount()) {
+			carriedAccess.set(result);
+			slot.set(storageStack);
+			return true;
+		}
+
+		return super.overrideOtherStackedOnMe(storageStack, otherStack, slot, action, player, carriedAccess);
+	}
+
+	@Override
+	public boolean canFitInsideContainerItems() {
+		return Config.COMMON.canBePlacedInContainerItems.get();
 	}
 }
